Disable button after click SEND OTP Removed breadcrumbs Fixed sidebar and header scrolling issues Add PLants/Branches button Required and none required fields Spacing issues Form UI improvement issues

--- a/apollo-webs/src/app/components/new-login-signup/new-login-signup.component.css
+++ b/apollo-webs/src/app/components/new-login-signup/new-login-signup.component.css
@@ -385,7 +385,8 @@ p {
 }
 
 .dashboard-content {
-  padding: 0px 30px 0px 20px;
+  padding: 0 30px 0px 20px;
+  top: 5%;
 }
 
 .welcome-banner {
